Add puppeteer and tracealyzer

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "puppeteer": "^1.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
-    "serve": "^10.1.1"
+    "serve": "^10.1.1",
+    "tracealyzer": "^0.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
