--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prettyjson": "^1.2.1",
-    "puppeteer": "^1.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2",
+    "react-scripts": "2.1.2"
+  },
+  "devDependencies": {
+    "prettyjson": "^1.2.1",
+    "puppeteer": "^1.11.0",
     "serve": "^10.1.1",
     "tracealyzer": "^0.9.3"
   },
